# cyrsoxs

./: .gitignore  .gitmodules  CITATION.cff  CMakeLists.txt  LICENSE  README.md  THIRD-PARTY-LICENSES  THIRD-PARTY-SOFTWARE.md  environment-build.yml  index.html  pyproject.toml
.github/workflows/: build.yml  ci.yml  github-actions-demo.yml  publish-docs.yml  release.yml  wheels.yml
Data/: LICENSE  config.txt  edgeSphereZYX.h5  edgespheres32.hd5  sample.h5
Data/config/: Material0.txt  config.txt
Data/regressionData/Ewald/: Ewald.dmp
Data/regressionData/FFT/: fftpolarizeX.dmp  fftpolarizeY.dmp  fftpolarizeZ.dmp
Data/regressionData/Scatter/: scatter_3D.dmp
Data/regressionData/SingleAngle/0degree/Ewald/: Ewald.dmp
Data/regressionData/SingleAngle/0degree/FFT/: fftpolarizeX.dmp  fftpolarizeXbshift.dmp  fftpolarizeY.dmp  fftpolarizeYbshift.dmp  fftpolarizeZ.dmp  fftpolarizeZbshift.dmp
Data/regressionData/SingleAngle/0degree/polarization/: polarizeX.dmp  polarizeY.dmp  polarizeZ.dmp
Data/regressionData/SingleAngle/20degree/Ewald/: Ewald.dmp
Data/regressionData/SingleAngle/20degree/FFT/: fftpolarizeX.dmp  fftpolarizeXbshift.dmp  fftpolarizeY.dmp  fftpolarizeYbshift.dmp  fftpolarizeZ.dmp  fftpolarizeZbshift.dmp
Data/regressionData/SingleAngle/20degree/Scatter/: scatter_3D.dmp
Data/regressionData/SingleAngle/20degree/polarization/: polarizeX.dmp  polarizeY.dmp  polarizeZ.dmp
Data/regressionData/SingleAngle/Scatter/: scatter_3D.dmp
Data/regressionData/SingleAngle/config/: Material1.txt  config.txt
Data/regressionData/config/: Material1.txt  config.txt
Data/regressionData/fullData/: Energy_280.00.h5  Energy_280.10.h5  Energy_280.20.h5  Energy_280.30.h5  Energy_280.40.h5
Data/regressionData/polarization/: polarizeX.dmp  polarizeY.dmp  polarizeZ.dmp
Matlab/: RodriguesRotation.m  check.m  checkMatValues.m  checkRotation.m  checkmat.m  computeRotationMatrix.m  fftTest.m  fftTest.m~  kRotation.m  krot.m  rotationChecks.m  scatter3D.m  scatter3DRot.m
OpticalConstants/: PEOlig2018.txt  README.md
_includes/: ntd2d_variants.html
cmake/: CyRSoXSHDF5.cmake  version.cmake  version.h.in
docs/: Changes.md  DATA.md  DOCKER.md  Doxyfile  FAQ.md  INSTALL.md  KNOWN_ISSUES.md  RUN.md  Visualization.md
docs/sphinx/: conf.py  index.rst
en/docs-to-nist-pages/: .buildinfo  Datatypes_8h.html  Datatypes_8h__dep__incl.map  Datatypes_8h__dep__incl.md5  Datatypes_8h__incl.map  Datatypes_8h__incl.md5  Datatypes_8h_source.html  InputData_8h.html  InputData_8h__dep__incl.map  InputData_8h__dep__incl.md5  InputData_8h__incl.map  InputData_8h__incl.md5  InputData_8h_source.html  Input_8h.html  Input_8h__dep__incl.map  Input_8h__dep__incl.md5  Input_8h__incl.map  Input_8h__incl.md5  Input_8h_source.html  Polarization_8h.html  Polarization_8h__dep__incl.map  Polarization_8h__dep__incl.md5  Polarization_8h__incl.map  Polarization_8h__incl.md5  Polarization_8h_source.html  RefractiveIndex_8h.html  RefractiveIndex_8h__dep__incl.map  RefractiveIndex_8h__dep__incl.md5  RefractiveIndex_8h__incl.map  RefractiveIndex_8h__incl.md5  RefractiveIndex_8h_source.html  RotationMatrix_8cpp.html  RotationMatrix_8cpp__incl.map  RotationMatrix_8cpp__incl.md5  RotationMatrix_8h.html  RotationMatrix_8h__dep__incl.map  RotationMatrix_8h__dep__incl.md5  RotationMatrix_8h__incl.map  RotationMatrix_8h__incl.md5  RotationMatrix_8h_source.html  (+169 more)
en/docs-to-nist-pages/_downloads/: CyRSoXS.epub
en/docs-to-nist-pages/_static/: documentation_options.js  ntd2d.css  ntd2d_menu.html
en/docs-to-nist-pages/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  (+82 more)
include/: Datatypes.h  Rotation.h  RotationMatrix.h  cudaHeaders.h  cudaMain.h  cudaUtils.h  uniaxial.h  utils.h
include/Input/: Input.h  InputData.h  readH5.h
include/Output/: cencode.h  outputUtils.h  writeH5.h  writeVTI.h
include/PyClass/: Polarization.h  RefractiveIndex.h  ScatteringPattern.h  VoxelData.h
notebook/: CyRSoXS.ipynb  cyrsoxs_framework.py  framework_example.ipynb
python/cyrsoxs/: __init__.py
scripts/: .config.txt.swp  Material0.txt  config.txt  convertToCSV.sh  createMorphology.py  createMovie.py  errorComparison.py  generateConstants.py  movie.pvsm  newFormatConvertor.py  newFromatConvertor.py  rotationMatrix.m  vtiToCSV.py  xdmfGenerator.py
src/: RotationMatrix.cpp  cudaMain.cu  main.cpp  pymain.cpp
tests/: test_import_smoke.py  tests.cpp
tests/include/: basicFramework.h  fullFramework.h  kernels.h  sample.h  testUtils.h  unitTest.h
tests/src/: kernel.cu
